widgets added and bug fixes

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Dynamic/AssetsvilleTown/Maps/Demonstration.Demonstration
+GameDefaultMap=/Game/Dynamic/Blueprints/Levels/Menu.Menu
 EditorStartupMap=/Game/Dynamic/AssetsvilleTown/Maps/Demonstration.Demonstration
 GlobalDefaultGameMode=/Game/Dynamic/Blueprints/Core/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
 GameInstanceClass=/Game/Dynamic/Blueprints/Core/GI_FGCT4007.GI_FGCT4007_C
